# sx

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.bat  sx.sublime-project
cmake/: rpi.cmake
gcc-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
gcc-mingw/tests/: Makefile  cmake_install.cmake
include/sx/: _simd.h  allocator.h  app.h  array.h  atomic.h  bheap.h  bitarray.h  cmdline.h  config.h  fiber.h  gfx.h  handle.h  hash.h  ini.h  io.h  jobs.h  lin-alloc.h  linear-buffer.h  lockless.h  macros.h  math-easing.h  math-scalar.h  math-types.h  math-vec.h  math.h  os.h  platform.h  pool.h  ringbuffer.h  rng.h  simd.h  stack-alloc.h  string.h  sx.h  threads.h  timer.h  tlsf-alloc.h  virtual-alloc.h  vmem.h
include/sx/inline/: allocator.inl  array.inl  atomic.inl  handle.inl  hash.inl  math.inl  os.inl  pool.inl
src/: allocator.c  app.c  bheap.c  cmdline.c  fiber.c  gfx.c  handle.c  hash.c  ini.c  io.c  jobs.c  lin-alloc.c  lockless.c  math.c  os.c  os.m  ringbuffer.c  rng.c  stack-alloc.c  string.c  sx.c  threads.c  timer.c  tlsf-alloc.c  virtual-alloc.c  vmem.c
tests/: CMakeLists.txt  test-bheap.c  test-cmdline.c  test-fiber.c  test-hash.c  test-iff.c  test-ini.c  test-jobs.c  test-sokol.c  test-threads.c  test-timer.c  test-tlsf.c  test-virtualmem.c
